--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@ nav { position: fixed; top: 0; right: 0; left: 0; background: rgba(10,10,15,0.95
 .hero { display: flex; align-items: center; justify-content: center; text-align: center; position: relative; background-color: #0a0a0f; min-height: 100vh; }
 .hero-bg { position: absolute; top: 0; left: 0; right: 0; bottom: 0; }
 .hero-bg img { width: 100%; height: 100%; object-fit: cover; object-position: center top; }
-.hero-image-only { min-height: 0 !important; padding: 0 !important; margin-top: 60px; }
-.hero-image-only .hero-bg { position: relative; }
-.hero-image-only .hero-bg img { width: 100%; height: auto; display: block; object-fit: contain; }
-@media (max-width: 768px) { .hero-image-only { margin-top: 50px; } .hero-image-only .hero-bg img { width: 100%; height: auto; object-fit: contain; } }
+.hero-image-only { min-height: 0 !important; padding: 0 !important; padding-top: 60px !important; background-color: #0a0a0f; }
+.hero-image-only .hero-bg { position: relative; width: 100%; }
+.hero-image-only .hero-bg img { width: 100%; height: auto; display: block; object-fit: contain; object-position: top center; }
+@media (max-width: 768px) { .hero-image-only { padding-top: 56px !important; } }
 .hero-overlay { position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: rgba(0,0,0,0.5); }
 .hero-content { padding: 20px; max-width: 800px; position: relative; z-index: 1; }
 .hero h1 { font-size: clamp(2.5rem, 6vw, 4rem); margin-bottom: 20px; color: #fff; }
@@ -180,7 +180,7 @@ footer { background: rgba(0,0,0,0.5); padding: 50px 20px 25px; }
 <p class="title">מייסד ובעלים</p>
 <p>ייצוג תאגידים סטטוטוריים וציבוריים, חברות ציבוריות, חברות פרטיות בתחום המשפט המסחרי, תוך מתן שירות מקיף, בהתאם לצורכיהם העסקיים והמשפטיים, אשר כוללים בין היתר, עריכת חוזים, הכנת חוות דעת מקצועיות, ליווי וייעוץ לתאגידים סטטוטוריים, ציבוריים, פרטיים, נושאי משרה ונבחרים, הכנת כתבי בית דין, חוות דעת, ניהול מו"מ וליטיגציה בבית המשפט בהיקף שעות נרחב.
 ליווי תאגידים בתחום יחסי עבודה ודיני עבודה הן במישור הקיבוצי והן במישור הפרטני, ליטיגציה, עריכת מכרזים, נציג ציבור בבית הדין האזורי לעבודה בחיפה. 
-מרצה במכללה לבטיחות בבניה "הנדסה בגובה".  
+מרצה במכללה לבטיחות בבניה " הנדסה בגובה".  
 </p>
 </div>
 </div>
