--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ nav { position: fixed; top: 0; right: 0; left: 0; background: rgba(10,10,15,0.95
 .hero-image-only { min-height: 0 !important; padding: 0 !important; margin-top: 70px !important; background-color: #0a0a0f; overflow: visible !important; }
 .hero-image-only .hero-bg { position: relative; width: 100%; overflow: visible !important; }
 .hero-image-only .hero-bg img { width: 100%; height: auto !important; max-height: none !important; display: block; object-fit: contain !important; object-position: top center !important; }
-@media (max-width: 768px) { .hero-image-only { margin-top: 70px !important; } }
+@media (max-width: 768px) { .hero-image-only { margin-top: 80px !important; } }
 .hero-overlay { position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: rgba(0,0,0,0.5); }
 .hero-content { padding: 20px; max-width: 800px; position: relative; z-index: 1; }
 .hero h1 { font-size: clamp(2.5rem, 6vw, 4rem); margin-bottom: 20px; color: #fff; }
@@ -199,7 +199,6 @@ footer { background: rgba(0,0,0,0.5); padding: 50px 20px 25px; }
 <footer>
 <div class="footer-content">
 <div class="footer-section">
-<h4>משרד עורכי דין</h4>
 <p></p>
 </div>
 <div class="footer-section">
@@ -212,7 +211,7 @@ footer { background: rgba(0,0,0,0.5); padding: 50px 20px 25px; }
 <h4>יצירת קשר</h4>
 </div>
 </div>
-<div class="footer-bottom">© 2026 משרד עורכי דין | כל הזכויות שמורות</div>
+<div class="footer-bottom">© 2026  | כל הזכויות שמורות</div>
 </footer>
 <style>
 .a11y-widget { position: fixed; bottom: 20px; right: 20px; z-index: 9999; font-family: 'Heebo', sans-serif; }
